syntax = "proto3";
package thesixnetwork.sixnft.nftmngr;

option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types";

message ActionExecutor {
  string nftSchemaCode = 1; 
  string executorAddress = 2; 
  string creator = 3;
}

message ActionExecutorBySchema {
  string nftSchemaCode = 1; 
  repeated string executorAddress = 2; 
}